@@ -290,7 +290,6 @@ decl_stmt|;
 comment|// used by skipToNextMarker
 DECL|field|skipDecompression
 specifier|private
-specifier|static
 name|boolean
 name|skipDecompression
 init|=
@@ -691,6 +690,33 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|this
+argument_list|(
+name|in
+argument_list|,
+name|readMode
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|CBZip2InputStream (final InputStream in, READ_MODE readMode, boolean skipDecompression)
+specifier|private
+name|CBZip2InputStream
+parameter_list|(
+specifier|final
+name|InputStream
+name|in
+parameter_list|,
+name|READ_MODE
+name|readMode
+parameter_list|,
+name|boolean
+name|skipDecompression
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|super
 argument_list|()
 expr_stmt|;
@@ -728,6 +754,12 @@ operator|.
 name|readMode
 operator|=
 name|readMode
+expr_stmt|;
+name|this
+operator|.
+name|skipDecompression
+operator|=
+name|skipDecompression
 expr_stmt|;
 if|if
 condition|(
@@ -836,18 +868,8 @@ throws|throws
 name|IOException
 block|{
 name|CBZip2InputStream
-operator|.
-name|skipDecompression
-operator|=
-literal|true
-expr_stmt|;
-name|CBZip2InputStream
 name|anObject
 init|=
-literal|null
-decl_stmt|;
-name|anObject
-operator|=
 operator|new
 name|CBZip2InputStream
 argument_list|(
@@ -856,8 +878,10 @@ argument_list|,
 name|READ_MODE
 operator|.
 name|BYBLOCK
+argument_list|,
+literal|true
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 return|return
 name|anObject
 operator|.
@@ -1123,8 +1147,6 @@ block|{
 name|changeStateToProcessABlock
 argument_list|()
 expr_stmt|;
-name|CBZip2InputStream
-operator|.
 name|skipDecompression
 operator|=
 literal|false
